--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,7 @@ version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
+default_expiration: "4d 5h"
 
 libraries:
 - name: jinja2
@@ -16,8 +17,7 @@ handlers:
 - url: /(.*\.(html|css|js|gif|jpg|png|ico))
   static_files: static/\1
   upload: static/.*
-  secure: always
-  expiration: "1d"
+  expiration: "10d"
 
 - url: .*
   script: main.app
